--- a/Models/SpeechLM/ST2S/2024.10.06_HALL-E.md
+++ b/Models/SpeechLM/ST2S/2024.10.06_HALL-E.md
@@ -16,7 +16,7 @@
   - [Github]
   - [Demo](https://yutonishimura-v2.github.io/HALL-E_DEMO/)
 - 文件:
-  - [ArXiv](_PDF/2410.04380v1__HALL-E__Hierarchical_Neural_Codec_Language_Model_for_Minute-Long_Zero-Shot_Text-to-Speech_Synthesis.pdf)
+  - [ArXiv](../_PDF/2410.04380v1__HALL-E__Hierarchical_Neural_Codec_Language_Model_for_Minute-Long_Zero-Shot_Text-to-Speech_Synthesis.pdf)
   - [Publication] #TODO
 
 </details>
@@ -57,9 +57,16 @@ Audio samples, dataset, codes and pre-trained models are available at [this http
 
 ## 1·Introduction: 引言
 
+<table><tr><td width="50%">
+
 Recent advances in large language models (LLMs) have enabled us to model complex linguistic structures and patterns with unprecedented precision in natural language processing tasks~\citep{brown2020language, chowdhery2023palm, zeng2023glm130b}.
 Motivated by these developments, LLM-based text-to-speech (TTS) models have gained significant research interest for their ability to model complex speech structures and patterns, enabling the synthesis of more natural-sounding speech in a zero-shot manner~\citep{wang2023valle, zhang2023vallex, song2024ella, han2024valler, chen2024valle2, xin2024ralle, meng2024melle}.
 The core concept behind LLM-based TTS models is to translate natural language text into a sequence of audio tokens, typically using frozen natural audio codec (NAC) models that quantize audio signals into discrete tokens via vector quantization techniques~\citep{zeghidour2021soundstream, defossez2022encodec, kumar2024DAC, Zhang2024SpeechTokenizer, wu2023audiodec, huang2023repcodec, du2024funcodec, yang2023hificodec}.
+
+</td><td>
+
+</td></tr>
+<tr><td>
 
 Since LLMs are becoming capable of capturing long context in text~\citep{guo2022longt5, chen2024longlora, han2024hyperattention}, LLM-based TTS models are also expected to handle long context to synthesize speech over extended periods.
 However, this presents significant challenges, mainly because the length of audio tokens per second is typically large.
@@ -68,6 +75,11 @@ We refer to the number of audio tokens per second as the frame rate (Hz).
 As recently discussed and investigated by~\cite{han2024valler, chen2024valle2}, reducing the frame rate is essential, but not straightforward.
 Simply reducing the frame rate in NAC models results in degraded audio quality and incorrect phoneme pronunciation.
 Addressing this issue requires novel solutions that bridge NAC models and LLM-based TTS models.
+
+</td><td>
+
+</td></tr>
+<tr><td>
 
 In this paper, we propose a novel approach to tackle the challenge of minitue-long speech synthesis in LLM-based TTS models by introducing a hierarchical post-training framework that effectively manages the trade-off between reducing frame rate and producing high-quality speech.
 Our contributions are summarized as follows:
@@ -82,9 +94,13 @@ The test set consists of 8 hours of speech data with transcriptions created by p
 4) We thoroughly conducted experiments to provide best practices for managing the trade-off between reducing frame rate and producing high-quality speech, while demonstrating the effectiveness and efficiency of our approach.
 We open-source dataset, codes and pre-trained models along with audio samples at [Demo Page](https://yutonishimura-v2.github.io/HALL-E_DEMO/).
 
+</td></tr></table>
+
 ## 2·Related Works: 相关工作
 
-### Neural Audio Codec Models
+<table><tr><td width="50%">
+
+**Neural Audio Codec Models**
 
 NAC models produce discrete audio tokens by quantizing audio signals.
 SoundStream~\citep{zeghidour2021soundstream} and Encodec~\citep{defossez2022encodec} are pioneering NAC models, which significantly improved compression efficiency over traditional audio codecs.
@@ -94,7 +110,12 @@ Many studies have focused on reducing bps, while few have explored lowering the 
 \cite{defossezmoshi} achieved the lowest frame rate for a NAC model, reaching 12.5Hz by incorporating Transformer models and SpeechTokenizer.
 We report achieving an even lower frame rate of 8Hz, which is about 1.5 times shorter than it.
 
-### Zero-Shot TTS
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Zero-Shot TTS**
 
 Zero-Shot TTS aims to synthesize speech from text in the voice of a target speaker using only a short reference audio segment from that speaker.
 Early models relied on speaker embeddings or speaker adaptation~\citep{casanova22yourtts, arik2018neuralvoicecloning, chen2019sample},
@@ -112,9 +133,15 @@ UniAudio~\citep{yang2023uniaudio},
 Audiobox~\citep{vyas2023audiobox}.
 In contrast, this work explores post-training methods to reduce the frame rate of LLM-based models, aiming at minute-long speech synthesis given a pre-trained NAC model such as Encodec.
 
+</td><td>
+
+</td></tr></table>
+
 ### Preliminaries
 
-#### Neural Audio Codec
+<table><tr><td width="50%">
+
+**Neural Audio Codec**
 
 A NAC model typically consists of three components: an encoder $\mathrm{Enc}(\cdot)$, a vector quantizer $\mathrm{VQ}(\cdot)$, and a decoder $\mathrm{Dec}(\cdot)$.
 The quantizer is the core component that produces discrete audio tokens.
@@ -133,7 +160,12 @@ $\tilde{\bm{z}}_{l} = \mathrm{Emb}_{l}(\bm{z}_{l}) \in \mathbb{R}^{d \times n}$ 
 $l \in \{1, 2, \cdots, L\}$ is the layer index, and $L$ is the number of layers.
 The output $\bm{h} \in \mathbb{R}^{d \times n}$ is then fed into the decoder to reconstruct the input audio as $\bm{y} = \mathrm{Dec}(\bm{h})$.
 
-#### LLM-based TTS.
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**LLM-based TTS**
 
 An LLM-based TTS typically consists of two decoder-only language models: an autoregressive (AR) model $T_{\mathrm{ar}}$ and a non-autoregressive (NAR) model $T_{\mathrm{nar}}$ \citep{wang2023valle}.
 The speech synthesis procedure is given by the following equations:
@@ -149,7 +181,12 @@ In Eq.~(\ref{eq:valle2}), $T_{\mathrm{nar}}$ iteratively generates token sequenc
 Finally, in Eq.~(\ref{eq:valle4}), speech $\hat{\bm{y}}$ is generated.
 Note that $\mathrm{Enc}, \mathrm{VQ}_{1}$, and $\mathrm{Dec}$ are from a frozen NAC model.
 
-#### Preliminary Experiments
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Preliminary Experiments**
 
 LLM-based TTS models have a predefined context window size and are typically trained with speech data ranging from several seconds to several tens of seconds.
 To generate long speech segments, a straightforward approach is to reduce the frame rate in the NAC model.
@@ -159,16 +196,28 @@ Figure~\ref{fig:preliminary}, where we evaluated the performance of Encodec~\cit
 Specifically, it is confirmed that training becomes entirely difficult at 8Hz.
 Therefore, in this study, we propose a NAC model that works even at an 8Hz, demonstrating a significant improvement over existing limitations.
 
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
 
-### 3.1·MReQ: Multi-Resolution Requantization
+### MReQ: Multi-Resolution Requantization
+
+<table><tr><td width="50%">
 
 This section introduces MReQ, a post-training framework for hierarchically reorganizing a pre-trained RVQ module to reduce the frame rate.
 Specifically, MReQ incorporates a multi-resolution residual vector quantization (MRVQ) module to a pre-trained NAC model as shown in Figure~\hyperref[fig:mreq]{\ref*{fig:mreq}}, and continues training the NAC model in a teacher-student distillation manner.
 For a pre-trained 48Hz Encodec model, MReQ reduces the frame rate at the first quantization layer to 8 Hz.
 This enables LLM-based TTS models to handle longer contexts.
 
+</td><td>
+
+</td></tr></table>
+
 #### Architecture
+
+<table><tr><td width="50%">
 
 The MRVQ module is a nested structure of RVQ.
 Specifically, it consists of a residual structure composed of multiple low frame-rate residual vector quantization (LRVQ) blocks, each of which is itself a residual structure operating at a different frame rate.
@@ -221,14 +270,25 @@ Each sub-decoder $D_{k}$ consists of two bi-LSTM layers followed by a transposed
 Table~\ref{tab:mrvq_arc} lists frame rates $s_{k}$, hyperparameter triplets $\alpha-\beta-\gamma$, and strides for the convolution and transposed convolution layers.
 For $k=4$, only the pre-quantize is used,  and the other components are replaced with identical functions, reducing Eqs.~(\ref{eq:lrvq2}, \ref{eq:lrvq3}) to $\bm{b}_{4} = \bm{a}_{4}$ and $\bm{c}_{4} = \bm{b}_{4}$, respectively.
 
+</td><td>
+
+</td></tr></table>
+
 #### Post-Training with Teacher-Student Distillation
+
+<table><tr><td width="50%">
 
 Training NAC models with the MRVQ module is challenging because quantization layers with lower frame rates are prone to be ignored.
 To address this, we introduce a post-training technique based on teacher-student distillation, where a NAC model pre-trained with a high frame rate serves as the teacher model.
 As shown in Figure~\hyperref[fig:mreq]{\ref*{fig:mreq}a}, teacher embeddings ({in green}) are extracted from the frozen RVQ module, while student embeddings ({in purple}) are extracted from the MRVQ module.
 We then minimize the feature-level distillation (FLD) loss and the hidden-state reconstruction (HSR) loss.
 
-**FLD loss.**
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**FLD Loss**
 The FLD loss is a mean absolute error (MAE) loss between teacher and student embeddings, defined as follows:
 
 $$
@@ -248,7 +308,12 @@ We use $\mathcal{P} = \{({1}, {1}), ({2}, {3}), ({3}, {5}), ({4}, {8})\}$ for RV
 Note that $\tilde{\bm{c}}_{k}$ and $\tilde{\bm{z}}_{l}$ are obtained from Eqs.~(\ref{eq:mrvq1}) and Eqs.~(\ref{eq:rvq1}), respectively.
 The student-teacher pairs in $\mathcal{P}$ are determined so that the cumulative number of student's post-quantization layers matches that of the teacher's quantization layers.
 
-**HSR loss.**
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**HSR Loss**
 
 The HSR loss is introduced to further facilitate training of each LRVQ block:
 
@@ -264,21 +329,255 @@ $$
 
 where $\tilde{\bm{a}}_{k}, \tilde{\bm{b}}_{k}$ are from Eqs.~(\ref{eq:lrvq1}, \ref{eq:lrvq2}), and $\lambda^{\mathrm{HSR}}_{k}$ is a weight {coefficient}.
 
-**Total loss.**
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Total Loss**
+
 The total loss is given by
 $L_{\mathrm{total}} = L_{\mathrm{NAC}} + L_{\mathrm{FLD}} + L_{\mathrm{HSR}}$, where $L_{\mathrm{NAC}}$ is the loss used to train the NAC model.
 We continue to train the encoder and decoder with the MRVQ module using a copied weight from the NAC model, which is used as a teacher model.
 Compared to training from scratch, this allows for more efficient and stable convergence.
 
+</td><td>
+
+</td></tr>
+<tr><td>
+
 **Discussion.**
 Our post-training approach is designed to be independent of the encoder-decoder architecture of the original NAC model, as we only assumed the use of RVQ.
 Consequently, by utilizing state-of-the-art NAC models such as SpeechTokenizer~\citep{Zhang2024SpeechTokenizer} instead of Encodec~\citep{defossez2022encodec}, it is possible to achieve higher performance at a lower frame rate.
 
+</td><td>
+
+</td></tr></table>
+
 ## 4·Experiments: 实验
+
+### Datasets (MinutesSpeech Benchmark Dataset)
+
+<table><tr><td width="50%">
+
+This section introduces MinutesSpeech, a benchmark dataset for minutes-long  TTS synthesis.
+Unlike previous datasets such as LibriSpeech, which are primarily designed for automatic speech recognition, our dataset is curated to advance TTS research from the following three perspectives.
+
+(1) Benchmarking Minutes-long TTS Synthesis.
+
+We provide two subsets for benchmarking: MinutesSpeech-90s and MinutesSpeech-180s, consisting of speech segments ranging from 3 seconds to 90 seconds and 3 seconds to 180 seconds, respectively.
+All test audio files are under Creative Commons licenses.
+For each speech segment, we provide transcriptions created by two professional native transcribers.
+Since LLM-based TTS models have been typically evaluated using audio segments ranging from 4 to 10 seconds from LibriSpeech in previous studies, our dataset promotes research on longer speech synthesis by providing substantially longer segments.
+
+(2) Balanced Audio Length for Training.
+
+We also provide a training set consisting of 40,000 hours of audio data. To successfully train TTS models capable of stably generating audio ranging from a few seconds to over a minute in a single inference, we carefully designed the distribution of audio lengths in the training dataset, covering durations from 3 seconds up to 180 seconds. Automatically generated transcriptions are provided for this subset to facilitate large-scale training.
+
+(3) Variety of Speaking Styles.
+
+To encompass a variety of conversational speech styles, we curated data from podcasts. Compared to the audiobook speech in LibriSpeech, synthesizing conversational speech is more challenging due to its spontaneous nature. We believe this is an important research direction that can help bridge the gap between LLMs and LLM-based TTS models.
+
+**Data Curation Pipeline**
+
+To create the training set, we first curated 296,464 podcast files, ranging from 10 to 90 minutes, totaling about 186k hours.
+We evaluated these audio files using the PESQ score. The audio was segmented every 30 seconds, and the score was calculated for each segment. We then computed the mean and standard deviation for each audio file, retaining only those with a mean score higher than 2.5 and a standard deviation lower than 0.6. As a result, approximately 25\% of the data remained.
+We then applied automatic speech recognition and speaker diarization to extract speech segments, each associated with a single speaker. Specifically, Whisper distil Large v3\footnote{\scriptsize \url{https://huggingface.co/distil-whisper/distil-large-v3}} was used for automatic transcriptions, and Pyannote\footnote{\scriptsize \url{https://huggingface.co/pyannote/speaker-diarization-3.1}} was employed for speaker diarization.
+We then segmented each audio file into segments ranging from 3 to 90 or 180 seconds.
+Lastly, we removed a certain proportion of utterances with text lengths that were either too long or too short,
+based on their respective distributions,
+resulting in a final dataset of approximately 40k hours.
+For the test set, we manually collected audio files under
+Creative Commons licenses and asked professional transcribers to select high-quality audio and create accurate transcriptions.
+Note that filtering based on the maximum and minimum text lengths used in the training set was also applied to each test set.
+
+**Dataset Statistics**
+
+Figure~\ref{fig:duration_dist} shows the distributions of speech durations and the number of words per segment in the test sets. As shown, our dataset provides a diverse range of speech lengths, facilitating the development and evaluation of TTS models capable of handling varying durations and linguistic content.
+
+</td><td>
+
+</td></tr></table>
+
+### Setup
+
+<table><tr><td width="50%">
+
+**Baseline Models**
+
+As a competitive comparison, we chose VALL-E~\citep{wang2023valle} using Encodec~\citep{defossez2022encodec} at 48Hz as the baseline model, which is already lower than 75Hz used in previous studies, based on our preliminary experiments (see Figure~\ref{fig:preliminary}).
+We also demonstrate the effectiveness of {our approach} on SpeechTokenizer~\citep{Zhang2024SpeechTokenizer}.
+
+</td><td>
+</td></tr>
+<tr><td>
+
+**Datasets**
+
+For training, we used the MinutesSpeech training set, specifically train-90s and -180s for HALL-E, and train-28s, -54s, -90s, and -180s for VALL-E.
+The train-28s and -54s are designed for 48Hz to match the token length in train-90s and -180s at 8Hz (see Table~\ref{tab:dataset}).
+For evaluation, MinutesSpeech test-90s, -180s, and LibriSpeech test\_clean set are used.
+The minimum audio length was set to 4s, while the maximum audio lengths were set to 90s, 180s, and 35s, respectively. The audio length for prompt was consistently set to 3s.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Evaluation Metrics**
+
+Two evaluation metrics are used for speech reconstruction experiments: WER and PESQ.
+WER is calculated using the conformer-transducer\footnote{\scriptsize \url{https://huggingface.co/nvidia/stt_en_conformer_transducer_xlarge}}.
+Six evaluation metrics are used for zero-shot TTS experiments: WER, speaker similarity (SIM), deep noise suppression mean opinion score (DNSMOS), Wasserstein distance (WD) with respect to the duration distribution, subjective evaluation of naturalness (QMOS), and subjective evaluation of speaker similarity (SMOS).
+SIM is calculated using WavLM-TDNN
+\footnote{\scriptsize \url{https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker_verification}}.
+DNSMOS is calculated using the model trained with ground truth human ratings obtained using ITU-T P.808~\citep{ITU2018dnsmos}\footnote{\scriptsize \url{https://github.com/microsoft/DNS-Challenge/tree/master/DNSMOS}}.
+WD is calculated between the duration distributions of the generated speech and the ground truth speech.
+For QMOS and SMOS, 40 utterances were randomly selected from each test set, and three native English speakers rated their naturalness on a scale from 1 to 5. We then calculated the mean and confidence intervals.
+
+</td><td>
+</td></tr>
+<tr><td>
+
+**Training Details**
+
+Encodec and SpeechTokenizer were pre-trained using the Adam optimizer for 100k iters with a batch size of 704 for Encodec and 674 for SpeechTokenizer on four H100 GPUs, and a learning rate of $9\times 10^{-4}$.
+MReQ post-training was performed on a single H100 GPU for 160k iters with a batch size of 160 and a learning rate of $3\times 10^{-4}$.
+VALL-E was pre-trained using the AdamW optimizer for 100k iters on four H100 GPUs.
+To fully utilize GPU memory, the batch size was adjusted based on the audio length of the training samples. A cosine annealing learning rate schedule was employed with an initial learning rate of $1 \times 10^{-4}$. HALL-E was trained using the same settings. More details are provided in Appendix~\ref{sec:model_detail}.
+
+</td><td>
+
+</td></tr></table>
 
 ## 5·Results: 结果
 
+### Speech Reconstruction
+
+<table><tr><td width="50%">
+
+Table~\ref{tab:codec_result} shows the speech reconstruction performance of Encodec and SpeechTokenizer before and after applying MReQ.
+As shown, MReQ achieved WER and PESQ scores comparable to the original values while significantly reducing the frame rate at the first quantization layer to as low as 8 Hz.
+
+</td><td>
+
+</td></tr></table>
+
+### Zero-Shot Speech Synthesis
+
+<table><tr><td width="50%">
+
+**MinutesSpeech Evaluation**
+
+Table~\ref{tab:MinutesSpeech_results} compares performance of zero-shot TTS synthesis on the MinutesSpeech test sets.
+Overall, HALL-E significantly outperformed the VALL-E, achieving comparable or even better WER and DNSMOS scores than the ground truth audio. This demonstrates the effectiveness of our approach.
+VALL-E resulted in a high WER and a low QMOS score when trained on train-28s because it cannot generate audio longer than 28 seconds.
+When trained on train-90s, the WER decreased but still remained significantly higher than that of ground truth. This is because training an AR model with a high frame rate is unstable, indicating that simply changing the training data is not sufficient for successful training.
+Our approach addressed this issue by lowering the frame rate via MReQ.
+In terms of SIM, VALL-E outperformed HALL-E because lowering the frame rate sacrifices acoustic information.
+However, HALL-E surpassed VALL-E in SMOS, as it generates the speaker's important style element, duration, much more naturally than VALL-E (see Figure~\ref{fig:sample_wav}).
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**LibriSpeech Evaluation**
+
+Table~\ref{tab:librispeech_results} shows results on LibriSpeech for short speech synthesis up to 35 seconds.
+As shown, VALL-E's WER increased as the training audio length increases. In contrast, HALL-E achieved a WER lower than 5\% even with train-180s.
+The gap in WER between the model and the ground truth is due to the difference between LibriSpeech, which primarily contains read speech, and MinutesSpeech, which includes a significant amount of spontaneous speech.
+Balancing speech synthesis of both read and spontaneous speech remains a challenge for future work.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**NAC Models**
+
+Table~\ref{tab:nacmodels} compares the results obtained by Encodec and SpeechTokenizer.
+As shown, all metrics except SIM improve with the use of SpeechTokenizer.
+Since SpeechTokenizer aims to preserve more linguistic information in the first VQ layer,
+it is likely that this aligns well with maintaining linguistic information better than acoustic information when the frame rate is reduced.
+These results suggest the potential for further performance enhancement by employing more advanced NAC models in the future.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Computational Efficiency**
+
+Table~\ref{tab:rtf} compares the real-time factor (RTF) of {VALL-E and HALL-E, measured} on an RTX 4090 GPU using the 4s to 10s segments from LibriSpeech. The results show that HALL-E generates audio approximately \textbf{3.4 times faster} than VALL-E.
+In LLM-based TTS, the {computational} bottleneck typically lies in the AR model.
+{Significant speed improvements were achieved by HALL-E because it reduces the number of tokens required for generation by a factor of six. This enhancement shows promising potential not only for LLM-based TTS but also for various applications, such as spoken language modeling, as part of future work.}
+
+</td><td>
+
+</td></tr></table>
+
+### Analysis and ablation studies
+
+<table><tr><td width="50%">
+
+**Is the hierarchical structure essential?**
+
+The results in Table \ref{tab:arc} demonstrate the impact of different frame rates adopted in MReQ on MinutesSpeech test-90s. For further details, please refer to Appendix~\ref{subsec:mreq_ablation}.
+From this table, it is evident that the proposed method achieves the best WER, indicating the importance of gradually increasing the frame rate in a hierarchical manner.
+{We also observed a trade-off between WER and SIM, as the SIM deteriorates with a reduction in the number of 48Hz layers in the proposed method.}
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Can HALL-E handle long audio prompts?**
+
+Table~\ref{tab:prompt} shows the SIM as a function of the audio length for prompt. The SIM values were calculated using audio segments longer than 25 seconds from the MinutesSpeech {test-90s}.
+As expected, longer audio length {resulted} in better performance. In zero-shot TTS, due to the limited context, the voice-cloning results are typically inferior to standard fine-tuning \citep{anastassiou2024seed}. Our proposed method has the potential to push the limits of such zero-shot TTS capabilities.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Ablation study for MReQ:**
+
+Table~\ref{tab:ablation_codec} shows the ablation study on the codec in the proposed method, using the LibriSpeech test set. The results indicate that both losses and post-training play important
+roles in the overall performance.
+It is important to note that although the impact of the FLD loss may appear minor, this does not mean that its influence on TTS is negligible. The codec model has a
+hierarchical structure with redundancy, meaning that information lost at {the first layer} can be compensated for in subsequent layers. However, when training the AR {model}, it is crucial for sufficient information to be present in {the first layer}, and {the} FLD loss is essential for achieving this. For further details, please refer to Appendix~\ref{subsec:mreq_ablation}.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Ablation study for HALL-E:**
+
+Table~\ref{tab:ablation_tts} {shows} the ablation study on HALL-E on MinutesSpeech test-90s. As shown, all the proposed methods were found to be effective.
+In particular, the results of {training only with PreQ or PostQ} highlight the importance of using the MRVQ sub-modules with NAR model as pointed out in Section~\ref{sec:halle}.
+This underscores the necessity of designing the codec model with downstream tasks in mind, ensuring that it is optimized for the specific requirements of those tasks.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Qualitative Results:**
+
+Figure~\ref{fig:sample_wav} shows the ground truth audio from MinutesSpeech test-90s and audio generated by each models. Both HALL-E and VALL-E models were trained on MinutesSpeech train-90s. As can be observed, HALL-E is able to generate durations very similar to the ground truth. On the other hand, VALL-E produces an unnatural waveform with almost no silence.
+Training the model at a low frame rate not only enables the generation of long speech segments but also allows for capturing more natural long-term temporal dynamics.
+For more examples, please refer to Appendix~\ref{subsec:duration_analysis}.
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
 
 We introduced two novel approaches for minute-long zero-shot text-to-speech synthesis: MReQ and HALL-E.
 MReQ reduced the frame rate of the Encodec model to 8 Hz by reorganizing audio tokens via MRVQ.
@@ -286,7 +585,14 @@ HALL-E efficiently synthesized minute-long speech by using 8Hz tokens in the AR 
 We demonstrated the effectiveness of these approaches on MinutesSpeech, the newly introduced dataset consisting of 40,000 hours of speech data.
 Our work contributed to promote zero-shot TTS research.
 
+</td><td>
+
+</td></tr></table>
+
 ### Limitations and Future Work
+
+
+<table><tr><td width="50%">
 
 By reducing the frame rate to 8 Hz, our AR model can utilize longer contexts, enhancing the naturalness of the synthesized speech.
 We believe that to handle extended context is particularly advantageous for larger AR models such as AudioLM~\citep{borsos2023audiolm}, SpeechGPT~\citep{zhang2023speechgpt}, and PSLM~\citep{mitsui2024pslm}.
@@ -298,3 +604,7 @@ Exploring such architectural enhancements is an important direction for future w
 Lastly, as shown in Table~\ref{tab:nacmodels}, our method brought significant improvements with SpeechTokenizer, even more so than when applied to Encodec.
 It means that our approach can further enhance the objective of preserving linguistic information.
 This indicates that our method could serve as a replacement for traditional SSL models~\citep{hsu2021hubert, chen2022wavlm} or ASR encoders~\citep{lakhotia2021generative, chu2023qwen}, marking an important direction for future research.
+
+</td><td>
+
+</td></tr></table>
